<resources>
    <string name="app_name" translatable="false">E-Torn</string>
    <string name="info_no_stores">No stores</string>
    <string name="your_turn">YOUR TURN</string>
    <string name="turns">turns</string>
    <string name="question_enable_location">Looks like location is disabled. Do you want to enable it?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="info_location_permission_needed">We need permission to use GPS to show you the closest supermarkets. Without this permission the app won\'t function correctly.</string>
    <string name="info_no_close_super">We didn\'t find any close supermarkets</string>
    <string name="no_location_permission">We don\'t have location permission</string>
    <string name="minutes">minutes</string>
    <string name="nextInQueue">You are the next</string>
    <string name="notificationTitle">Caprabo Turn</string>
    <string name="settings">Settings</string>
    <string name="notification_mode">Notification mode</string>
    <string name="turn_notification">Turn notification</string>
    <string name="is_your_turn">Is your turn</string>
    <string name="at_store">in the</string>
    <string name="there_are">there are</string>
    <string name="people_in_front">people in front of you</string>
    <string name="time_notification">Time notification</string>
    <string name="turn_notification_summary">From how many turns you want to be notified?</string>
    <string name="time_notification_summary">From how much time you want to be notified?</string>
    <string name="your_turn_lowercase" >your turn</string>
    <string name="available" >Available</string>
</resources>
